# lsfbot

./: Cargo.toml
.github/workflows/: ci.yml
src/: arg.rs  config.rs  main.rs  modul.rs  scraper.rs  user.rs
